# rgmk

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
io_tests/: Cargo.toml
src/: gamedata_io.rs  io_util.rs  lib.rs  pseudo_iff.rs  serde.rs
src/gamedata_io/: audio.rs  code.rs  fonts.rs  functions.rs  meta_data.rs  mod.rs  options.rs  scripts.rs  sounds.rs  sprites.rs  strings.rs  textures.rs  variables.rs
src/serde/: mod.rs  txtr.rs
